--- a/MainHTML.html
+++ b/MainHTML.html
@@ -2,9 +2,23 @@
 <html>
   <head>
     <title>Scouting</title>
+	<script src="MainJavaScript.js"></script>
+	<link rel="stylesheet" href="MainCSS.css">
   </head>
-  <body>
-    <p>scouty</p>
-    <p>scoutytoo</p>
-  </body>
+  <form>
+	<p> Touch Downs </p>
+  	<input id = "tds1" class = "form" placeholder = "Successful"></input>
+	<input id = "tda1" class = "form" placeholder = "Attempted"></input>
+	<button id="td" onClick="td()">Enter</button>
+	<br>
+	<p> Field Goals </p>
+	<input id = "fgs1" class = "form" placeholder = "Successful"></input>
+	<input id = "fga1" class = "form" placeholder = "Attempted"></input>
+	<button id="fga2" onClick="button2()">Enter</button>
+	<br>
+	<p> Extra Points </p>
+	<input id = "eps1" class = "form" placeholder = "Successful"></input>
+	<input id = "epa1" class = "form" placeholder = "Attempted"></input>
+	<button id="epa2" onClick="button3()">Enter</button>
+  </form>
 </html>
